scrollbars correct

--- a/src/scss/prices.scss
+++ b/src/scss/prices.scss
@@ -39,7 +39,7 @@
 
         width: 100%;
         min-height: 100px;
-        // display: none;
+        display: none;
         flex-direction: row;
         justify-content: flex-start;
         flex-wrap: wrap;
