--- a/src/scss/swiper-box.scss
+++ b/src/scss/swiper-box.scss
@@ -8,6 +8,18 @@
   margin-bottom: 4px;
   overflow: hidden;
 
+  .swiper {
+
+    width: 257px !important;
+    margin-left: 14px !important;
+
+  }
+
+  .swiper-slide {
+
+    width: 245px !important;
+  }
+
 
 }
 
